Added tooltips and better UI

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -43,15 +43,19 @@
      <Compile Include="Assets\Scripts\CombatManager.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\Actions\HighrollAttack.cs" />
+     <Compile Include="Assets\Scripts\UI\PartyMemberUI.cs" />
      <Compile Include="Assets\Scripts\Actions\Action.cs" />
      <Compile Include="Assets\Scripts\UI\QueueUI.cs" />
      <Compile Include="Assets\Scripts\Units\Unit.cs" />
+     <Compile Include="Assets\Scripts\Item.cs" />
      <Compile Include="Assets\Scripts\Dice\Dice.cs" />
      <Compile Include="Assets\Scripts\Units\Slime.cs" />
+     <Compile Include="Assets\Scripts\UI\ItemUI.cs" />
      <Compile Include="Assets\Scripts\UI\DiceUI.cs" />
      <Compile Include="Assets\Scripts\Party.cs" />
      <Compile Include="Assets\Scripts\TransitionManager.cs" />
      <Compile Include="Assets\Scripts\FloatingNumberUI.cs" />
+     <Compile Include="Assets\Scripts\UI\TooltipUI.cs" />
      <Compile Include="Assets\Scripts\GameEvents.cs" />
      <Compile Include="Assets\Scripts\Combatant.cs" />
      <Compile Include="Assets\Scripts\Actions\BasicAttack.cs" />
@@ -62,10 +66,9 @@
      <Compile Include="Assets\Scripts\CombatManagerUI.cs" />
      <Compile Include="Assets\Scripts\Units\Knight.cs" />
      <Compile Include="Assets\Scripts\UI\DiceSlotUI.cs" />
-     <Compile Include="Assets\Scripts\UI\PartyMemberUI.cs" />
-     <Compile Include="Assets\Scripts\UI\ItemUI.cs" />
-     <Compile Include="Assets\Scripts\UI\TooltipUI.cs" />
-     <Compile Include="Assets\Scripts\Item.cs" />
+     <Compile Include="Assets\OpenHyperlinks.cs" />
+     <Compile Include="Assets\Scripts\UI\ItemDisplayUI.cs" />
+     <Compile Include="Assets\Scripts\UI\TooltipTrigger.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
