--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -43,34 +43,44 @@
      <Compile Include="Assets\Scripts\CombatManager.cs" />
      <Compile Include="Assets\Scripts\UI\TooltipTrigger.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
-     <Compile Include="Assets\Scripts\Actions\HighrollAttack.cs" />
      <Compile Include="Assets\Scripts\UI\PartyMemberUI.cs" />
      <Compile Include="Assets\Scripts\Actions\Action.cs" />
      <Compile Include="Assets\Scripts\UI\QueueUI.cs" />
      <Compile Include="Assets\Scripts\Units\Unit.cs" />
      <Compile Include="Assets\Scripts\Item.cs" />
      <Compile Include="Assets\Scripts\Dice\Dice.cs" />
+     <Compile Include="Assets\Scripts\UI\SlidingWindow.cs" />
+     <Compile Include="Assets\HyperlinkTooltipTrigger.cs" />
      <Compile Include="Assets\Scripts\Units\Slime.cs" />
      <Compile Include="Assets\Scripts\UI\ItemDisplayUI.cs" />
      <Compile Include="Assets\Scripts\UI\ItemUI.cs" />
      <Compile Include="Assets\Scripts\UI\DiceUI.cs" />
+     <Compile Include="Assets\Scripts\UI\ItemSlotUI.cs" />
      <Compile Include="Assets\Scripts\Party.cs" />
      <Compile Include="Assets\Scripts\FloatingNumberUI.cs" />
      <Compile Include="Assets\Scripts\UI\TooltipUI.cs" />
-     <Compile Include="Assets\Scripts\GameEvents.cs" />
      <Compile Include="Assets\Scripts\Combatant.cs" />
      <Compile Include="Assets\Scripts\Actions\BasicAttack.cs" />
      <Compile Include="Assets\Scripts\UI\DiceBoardUI.cs" />
      <Compile Include="Assets\Scripts\Weapons\Weapon.cs" />
      <Compile Include="Assets\Scripts\UI\HealthbarUI.cs" />
-     <Compile Include="Assets\Scripts\Actions\Flee.cs" />
      <Compile Include="Assets\Scripts\CombatManagerUI.cs" />
      <Compile Include="Assets\Scripts\Units\Knight.cs" />
-     <Compile Include="Assets\Scripts\UI\DiceSlotUI.cs" />
      <Compile Include="Assets\Scripts\UI\StorageUI.cs" />
-     <Compile Include="Assets\Scripts\UI\SlidingWindow.cs" />
-     <Compile Include="Assets\HyperlinkTooltipTrigger.cs" />
-     <Compile Include="Assets\Scripts\UI\ItemSlotUI.cs" />
+     <Compile Include="Assets\Scripts\UI\DiceSlotUI.cs" />
+     <Compile Include="Assets\Scripts\Actions\HighrollAttack2.cs" />
+     <Compile Include="Assets\Scripts\Actions\HighrollAttack3.cs" />
+     <Compile Include="Assets\Scripts\Actions\HighrollAttack1.cs" />
+     <Compile Include="Assets\Scripts\Actions\LowrollAttack3.cs" />
+     <Compile Include="Assets\Scripts\Actions\LowrollAttack1.cs" />
+     <Compile Include="Assets\Scripts\Actions\LowrollAttack2.cs" />
+     <Compile Include="Assets\Scripts\Actions\AttackAction.cs" />
+     <Compile Include="Assets\Scripts\Actions\EvenAttack1.cs" />
+     <Compile Include="Assets\Scripts\Actions\OddAttack1.cs" />
+     <Compile Include="Assets\Scripts\CombatEvents.cs" />
+     <Compile Include="Assets\Scripts\Passives\Passive.cs" />
+     <Compile Include="Assets\Scripts\Passives\Passive1.cs" />
+     <Compile Include="Assets\Scripts\Passives\Passive2.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
