Started work towards selection screen

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
      <Compile Include="Assets\Scripts\UI\ItemUI.cs" />
      <Compile Include="Assets\Scripts\UI\ActionHolderUI.cs" />
      <Compile Include="Assets\Scripts\UI\DiceUI.cs" />
+     <Compile Include="Assets\Scripts\Armor.cs" />
      <Compile Include="Assets\Scripts\Actions\HighrollAttack2.cs" />
      <Compile Include="Assets\Scripts\UI\ItemSlotUI.cs" />
      <Compile Include="Assets\Scripts\Party.cs" />
@@ -84,12 +85,12 @@
      <Compile Include="Assets\Scripts\UI\HealthbarUI.cs" />
      <Compile Include="Assets\Scripts\Passives\Passive1.cs" />
      <Compile Include="Assets\Scripts\CombatManagerUI.cs" />
+     <Compile Include="Assets\Scripts\UI\FeedbackUI.cs" />
      <Compile Include="Assets\Scripts\Units\Knight.cs" />
      <Compile Include="Assets\Scripts\Actions\HighrollAttack1.cs" />
      <Compile Include="Assets\Scripts\UI\StorageUI.cs" />
-     <Compile Include="Assets\Scripts\Armor.cs" />
-     <Compile Include="Assets\Scripts\UI\FeedbackUI.cs" />
      <Compile Include="Assets\Scripts\UI\ConfirmButtonUI.cs" />
+     <Compile Include="Assets\Scripts\UI\Selection Scene\UnitUI.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
