Added random loot generation

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,18 +51,22 @@
      <Compile Include="Assets\Scripts\UI\TooltipTrigger.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\Passives\Passive4.cs" />
+     <Compile Include="Assets\Scripts\Passives\Passive5.cs" />
      <Compile Include="Assets\Scripts\UI\Selection Scene\StartButtonUI.cs" />
      <Compile Include="Assets\Scripts\Actions\EvenAttack1.cs" />
+     <Compile Include="Assets\Scripts\Passives\Passive7.cs" />
      <Compile Include="Assets\Scripts\UI\PartyMemberUI.cs" />
      <Compile Include="Assets\Scripts\TransitionManager.cs" />
      <Compile Include="Assets\Scripts\Actions\Action.cs" />
      <Compile Include="Assets\Scripts\UI\QueueUI.cs" />
      <Compile Include="Assets\Scripts\Units\Unit.cs" />
      <Compile Include="Assets\Scripts\Item.cs" />
+     <Compile Include="Assets\Scripts\Passives\Passive6.cs" />
      <Compile Include="Assets\Scripts\DicePool.cs" />
      <Compile Include="Assets\Scripts\Dice.cs" />
      <Compile Include="Assets\Scripts\Passives\Passive3.cs" />
      <Compile Include="Assets\Scripts\UI\SlidingWindow.cs" />
+     <Compile Include="Assets\Scripts\UI\PassUI.cs" />
      <Compile Include="Assets\Scripts\Actions\LowrollAttack1.cs" />
      <Compile Include="Assets\Scripts\UI\HyperlinkTooltipTrigger.cs" />
      <Compile Include="Assets\Scripts\UI\ActionInspectUI.cs" />
@@ -88,10 +92,12 @@
      <Compile Include="Assets\Scripts\MainMenuManager.cs" />
      <Compile Include="Assets\Scripts\CombatEvents.cs" />
      <Compile Include="Assets\Scripts\UI\DiceBoardUI.cs" />
+     <Compile Include="Assets\Scripts\Passives\Passive8.cs" />
      <Compile Include="Assets\Scripts\Passives\Passive2.cs" />
      <Compile Include="Assets\Scripts\Actions\LowrollAttack2.cs" />
      <Compile Include="Assets\Scripts\Weapon.cs" />
      <Compile Include="Assets\Scripts\UI\HealthbarUI.cs" />
+     <Compile Include="Assets\Scripts\UI\ConfirmActionUI.cs" />
      <Compile Include="Assets\Scripts\Passives\Passive1.cs" />
      <Compile Include="Assets\Scripts\CombatManagerUI.cs" />
      <Compile Include="Assets\Scripts\UI\PauseManager.cs" />
@@ -101,12 +107,8 @@
      <Compile Include="Assets\Scripts\UI\StorageUI.cs" />
      <Compile Include="Assets\Scripts\SelectionEvents.cs" />
      <Compile Include="Assets\Scripts\UI\ConfirmButtonUI.cs" />
-     <Compile Include="Assets\Scripts\UI\ConfirmActionUI.cs" />
-     <Compile Include="Assets\Scripts\UI\PassUI.cs" />
-     <Compile Include="Assets\Scripts\Passives\Passive6.cs" />
-     <Compile Include="Assets\Scripts\Passives\Passive5.cs" />
-     <Compile Include="Assets\Scripts\Passives\Passive8.cs" />
-     <Compile Include="Assets\Scripts\Passives\Passive7.cs" />
+     <Compile Include="Assets\Scripts\Storage.cs" />
+     <Compile Include="Assets\Scripts\LootGenerator.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
