Added new action types + improved UI

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -36,6 +36,7 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Skills\Actions\BountyAttack.cs" />
      <Compile Include="Assets\Scripts\Skills\Actions\LowrollAttack3.cs" />
      <Compile Include="Assets\Scripts\UI\Selection Scene\UnitHolderUI.cs" />
      <Compile Include="Assets\Scripts\Skills\Passives\Passive.cs" />
@@ -58,9 +59,11 @@
      <Compile Include="Assets\Scripts\UI\Tooltips\TextTooltipUI.cs" />
      <Compile Include="Assets\Scripts\UI\Tooltips\TooltipTrigger.cs" />
      <Compile Include="Assets\Scripts\GameEvents.cs" />
+     <Compile Include="Assets\Scripts\Skills\Actions\OddAttack2.cs" />
      <Compile Include="Assets\Scripts\Skills\Actions\Highroll\HighrollAttack4.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\Skills\Passives\Passive4.cs" />
+     <Compile Include="Assets\Scripts\Skills\Actions\EvenAttack3.cs" />
      <Compile Include="Assets\Scripts\Skills\Passives\Passive5.cs" />
      <Compile Include="Assets\Scripts\UI\Selection Scene\StartButtonUI.cs" />
      <Compile Include="Assets\Scripts\UI\StatusEffectUI.cs" />
@@ -78,6 +81,7 @@
      <Compile Include="Assets\Scripts\Item.cs" />
      <Compile Include="Assets\Scripts\Skills\Passives\Passive6.cs" />
      <Compile Include="Assets\Scripts\Status Effects\Strength.cs" />
+     <Compile Include="Assets\Scripts\Skills\Actions\OddAttack3.cs" />
      <Compile Include="Assets\Scripts\DicePool.cs" />
      <Compile Include="Assets\Scripts\Dice.cs" />
      <Compile Include="Assets\Scripts\Skills\Passives\Passive3.cs" />
@@ -104,6 +108,7 @@
      <Compile Include="Assets\Scripts\Skills\Actions\OddAttack1.cs" />
      <Compile Include="Assets\Scripts\UI\FloatingNumberUI.cs" />
      <Compile Include="Assets\Scripts\UI\Main Menu\HelpUI.cs" />
+     <Compile Include="Assets\Scripts\Skills\Actions\EvenAttack2.cs" />
      <Compile Include="Assets\Scripts\UI\SkillDisplaySlotUI.cs" />
      <Compile Include="Assets\Scripts\Combatant.cs" />
      <Compile Include="Assets\Scripts\UI\Tooltips\SkillTooltipUI.cs" />
@@ -131,11 +136,8 @@
      <Compile Include="Assets\Scripts\SelectionEvents.cs" />
      <Compile Include="Assets\Scripts\Skills\Skill.cs" />
      <Compile Include="Assets\Scripts\Status Effects\Bleed.cs" />
-     <Compile Include="Assets\Scripts\Skills\Actions\BountyAttack.cs" />
-     <Compile Include="Assets\Scripts\Skills\Actions\EvenAttack2.cs" />
-     <Compile Include="Assets\Scripts\Skills\Actions\OddAttack2.cs" />
-     <Compile Include="Assets\Scripts\Skills\Actions\EvenAttack3.cs" />
-     <Compile Include="Assets\Scripts\Skills\Actions\OddAttack3.cs" />
+     <Compile Include="Assets\Scripts\Skills\Actions\DoubleDamageAttack.cs" />
+     <Compile Include="Assets\Scripts\UI\ActionDisplayUI.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
