Refactored Selection screen + added new icons
You can now swap items and units. Descriptions can handle icons. Fixed bugs too

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
      <Compile Include="Assets\Scripts\Skills\Actions\Highroll\HighrollAttack5.cs" />
      <Compile Include="Assets\Scripts\AI\SlimeAI.cs" />
      <Compile Include="Assets\Scripts\Skills\Actions\Highroll\HighrollAttack3.cs" />
+     <Compile Include="Assets\Scripts\UI\Party UI\ArmorSlotUI.cs" />
      <Compile Include="Assets\Scripts\Skills\Actions\Highroll\HighrollAttack6.cs" />
      <Compile Include="Assets\Scripts\Skills\Actions\UniqueAttack1.cs" />
      <Compile Include="Assets\Scripts\Skills\Passives\Passive9.cs" />
@@ -74,7 +75,7 @@
      <Compile Include="Assets\Scripts\Skills\Actions\EvenAttack1.cs" />
      <Compile Include="Assets\Scripts\CameraManager.cs" />
      <Compile Include="Assets\Scripts\Skills\Passives\Passive7.cs" />
-     <Compile Include="Assets\Scripts\UI\PartyMemberUI.cs" />
+     <Compile Include="Assets\Scripts\UI\Party UI\PartyMemberUI.cs" />
      <Compile Include="Assets\Scripts\UI\SkillDisplayDescriptionUI.cs" />
      <Compile Include="Assets\Scripts\TransitionManager.cs" />
      <Compile Include="Assets\Scripts\Skills\Actions\Action.cs" />
@@ -94,15 +95,16 @@
      <Compile Include="Assets\Scripts\Skills\Actions\LowrollAttack1.cs" />
      <Compile Include="Assets\Scripts\UI\Tooltips\HyperlinkTooltipTrigger.cs" />
      <Compile Include="Assets\Scripts\Storage.cs" />
+     <Compile Include="Assets\Scripts\UI\Party UI\WeaponSlotUI.cs" />
      <Compile Include="Assets\Scripts\UI\Tooltips\UnitTooltipUI.cs" />
      <Compile Include="Assets\Scripts\Units\Slime.cs" />
-     <Compile Include="Assets\Scripts\UI\ItemUI.cs" />
+     <Compile Include="Assets\Scripts\UI\Party UI\ItemUI.cs" />
      <Compile Include="Assets\Scripts\UI\DiceUI.cs" />
      <Compile Include="Assets\Scripts\Equipment\Armor.cs" />
      <Compile Include="Assets\Scripts\UI\Tooltips\ItemTooltipUI.cs" />
      <Compile Include="Assets\Scripts\Skills\Actions\Highroll\HighrollAttack2.cs" />
      <Compile Include="Assets\Scripts\LootGenerator.cs" />
-     <Compile Include="Assets\Scripts\UI\ItemSlotUI.cs" />
+     <Compile Include="Assets\Scripts\UI\Party UI\ItemSlotUI.cs" />
      <Compile Include="Assets\Scripts\UI\Selection Scene\HolderHolder.cs" />
      <Compile Include="Assets\Scripts\Party.cs" />
      <Compile Include="Assets\Scripts\Status Effects\StatusEffect.cs" />
@@ -115,7 +117,7 @@
      <Compile Include="Assets\Scripts\UI\SkillDisplaySlotUI.cs" />
      <Compile Include="Assets\Scripts\Combatant.cs" />
      <Compile Include="Assets\Scripts\UI\Tooltips\SkillTooltipUI.cs" />
-     <Compile Include="Assets\Scripts\UI\ModelUI.cs" />
+     <Compile Include="Assets\Scripts\UI\Party UI\ModelUI.cs" />
      <Compile Include="Assets\Scripts\Skills\Actions\BasicAttack.cs" />
      <Compile Include="Assets\Scripts\MainMenuManager.cs" />
      <Compile Include="Assets\Scripts\CombatEnounterGenerator.cs" />
@@ -136,12 +138,12 @@
      <Compile Include="Assets\Scripts\UI\FeedbackUI.cs" />
      <Compile Include="Assets\Scripts\Units\Knight.cs" />
      <Compile Include="Assets\Scripts\Skills\Actions\Highroll\HighrollAttack1.cs" />
-     <Compile Include="Assets\Scripts\UI\StorageUI.cs" />
+     <Compile Include="Assets\Scripts\UI\Party UI\StorageUI.cs" />
      <Compile Include="Assets\Scripts\SelectionEvents.cs" />
+     <Compile Include="Assets\Scripts\UI\Party UI\MemberHolderUI.cs" />
      <Compile Include="Assets\Scripts\Skills\Skill.cs" />
      <Compile Include="Assets\Scripts\Status Effects\Bleed.cs" />
-     <Compile Include="Assets\Scripts\UI\WeaponSlotUI.cs" />
-     <Compile Include="Assets\Scripts\UI\ArmorSlotUI.cs" />
+     <Compile Include="Assets\Scripts\Skills\Actions\InverseDamageAttack.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
